--- a/Wangsheng Funeral Parlor/index.html
+++ b/Wangsheng Funeral Parlor/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet"	type="text/css" href="../css/css.css">
+		<link rel="stylesheet"	type="text/css" href="/css/css.css">
 		<meta charset="utf-8"	/>
 		<title> we are very sorry for your loss :( </title>
 	</head>
